Prevent page titles overwrapping with the polaroid images

--- a/css/_content.scss
+++ b/css/_content.scss
@@ -1,3 +1,9 @@
+.page-title {
+	z-index: 50;
+	position: relative;
+	text-shadow: 0px 0px 0.2em white;
+}
+
 .other-things {
 	margin-top: 4rem;
 	color: silver;
